policies/require-non-root.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPNonRootUser
metadata:
  name: require-non-root
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - nissastigen
